# kvu

./: Cargo.toml  README.md
.github/: CI.yml
.github/workflows/: CI.yml
assets/: kvu.monopic
src/: lib.rs  main.rs
tests/: cli_basic_test.rs  cli_create_test.rs  cli_delete_test.rs  cli_test.rs  cli_update_test.rs  cli_upsert_test.rs
